Bug-fix: Bei zu großem Text wird eine Scrollbar an der Karteikarte im freien Modus eingefuegt

--- a/src/pages/Lernmodi/FreierModus.module.css
+++ b/src/pages/Lernmodi/FreierModus.module.css
@@ -37,6 +37,7 @@
     border-radius: 10px;
     margin: 2%;
     word-wrap: break-word;
+    overflow: auto;
 }
 
 .card:hover {
